# reclaim-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVEL.md  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pull-request.yml  push.yml  python-package.yml
src/reclaim/: __init__.py  __main__.py  completers.py  dtfun.py  parse.py  str.py  utils.py
src/reclaim/commands/: __init__.py  add-time.py  base.py  config.py  create-task.py  delete-task.py  edit-task.py  list-events.py  list-tasks.py  log-work.py  mark-task.py  show-habit.py  show-load.py  show-task.py  show.py  start-task.py  stop-task.py
tests/: conftest.py  test_cmds.py  test_delete.py
