[build-system]
requires = ["setuptools>=45", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "reclaim-cli"
version = "0.1.2"
description = "A command-line tool for interacting with Reclaim.ai for task management."
license = {text = "MIT"}
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name="Rieck", email="konrad@mlsec.org" },
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "dateparser==1.2.1",
    "rich==13.9.4",
    "reclaim-sdk-fixed==0.6.3.post2",
]
keywords = ["cli", "reclaim", "productivity", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Topic :: Office/Business :: Scheduling",
]

[project.urls]
Homepage = "https://github.com/rieck/reclaim-cli"
Source = "https://github.com/rieck/reclaim-cli"
Issues = "https://github.com/rieck/reclaim-cli/issues"
Changelog = "https://github.com/rieck/reclaim-cli/blob/main/CHANGELOG.md"

[project.scripts]
reclaim = "reclaim.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["reclaim", "reclaim.commands"]

# Testing configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=reclaim"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*"
]

# Type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Code formatting
[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'

# Import sorting
[tool.isort]
profile = "black"
multi_line_output = 3

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "pre-commit",
    "flake8",
    "flake8-docstrings",
    "flake8-bugbear",
    "flake8-quotes",    
]
