[metadata]
name = reclaim-cli
version = 0.1.0
description = CLI for Reclaim.ai service

[options]
packages = 
    reclaim
    reclaim.commands
package_dir =
    =src
install_requires =
    PyYAML>=6.0
    reclaim-sdk>=0.6.3

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    reclaim = reclaim.__main__:main
